# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp120/cmp120.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp121/cmp121.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp122/cmp122.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp123/cmp123.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp124/cmp124.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp125/cmp125.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp126/cmp126.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp127/cmp127.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp128/cmp128.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp129/cmp129.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module2",
    srcs = [
        "cmp120/cmp120.component.ts",
        "cmp121/cmp121.component.ts",
        "cmp122/cmp122.component.ts",
        "cmp123/cmp123.component.ts",
        "cmp124/cmp124.component.ts",
        "cmp125/cmp125.component.ts",
        "cmp126/cmp126.component.ts",
        "cmp127/cmp127.component.ts",
        "cmp128/cmp128.component.ts",
        "cmp129/cmp129.component.ts",
        "module2.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp120/cmp120.component.html",
        "cmp121/cmp121.component.html",
        "cmp122/cmp122.component.html",
        "cmp123/cmp123.component.html",
        "cmp124/cmp124.component.html",
        "cmp125/cmp125.component.html",
        "cmp126/cmp126.component.html",
        "cmp127/cmp127.component.html",
        "cmp128/cmp128.component.html",
        "cmp129/cmp129.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module2",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        