# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp130/cmp130.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp131/cmp131.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp132/cmp132.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp133/cmp133.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp134/cmp134.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp135/cmp135.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp136/cmp136.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp137/cmp137.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp138/cmp138.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp139/cmp139.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module3",
    srcs = [
        "cmp130/cmp130.component.ts",
        "cmp131/cmp131.component.ts",
        "cmp132/cmp132.component.ts",
        "cmp133/cmp133.component.ts",
        "cmp134/cmp134.component.ts",
        "cmp135/cmp135.component.ts",
        "cmp136/cmp136.component.ts",
        "cmp137/cmp137.component.ts",
        "cmp138/cmp138.component.ts",
        "cmp139/cmp139.component.ts",
        "module3.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp130/cmp130.component.html",
        "cmp131/cmp131.component.html",
        "cmp132/cmp132.component.html",
        "cmp133/cmp133.component.html",
        "cmp134/cmp134.component.html",
        "cmp135/cmp135.component.html",
        "cmp136/cmp136.component.html",
        "cmp137/cmp137.component.html",
        "cmp138/cmp138.component.html",
        "cmp139/cmp139.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module3",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        