# Generated BUILD file, see /tools/generator
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_karma//:defs.bzl", "ts_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "module0_styles",
    src = "cmp170/cmp170.component.scss",
)

sass_binary(
    name = "module1_styles",
    src = "cmp171/cmp171.component.scss",
)

sass_binary(
    name = "module2_styles",
    src = "cmp172/cmp172.component.scss",
)

sass_binary(
    name = "module3_styles",
    src = "cmp173/cmp173.component.scss",
)

sass_binary(
    name = "module4_styles",
    src = "cmp174/cmp174.component.scss",
)

sass_binary(
    name = "module5_styles",
    src = "cmp175/cmp175.component.scss",
)

sass_binary(
    name = "module6_styles",
    src = "cmp176/cmp176.component.scss",
)

sass_binary(
    name = "module7_styles",
    src = "cmp177/cmp177.component.scss",
)

sass_binary(
    name = "module8_styles",
    src = "cmp178/cmp178.component.scss",
)

sass_binary(
    name = "module9_styles",
    src = "cmp179/cmp179.component.scss",
)

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "module7",
    srcs = [
        "cmp170/cmp170.component.ts",
        "cmp171/cmp171.component.ts",
        "cmp172/cmp172.component.ts",
        "cmp173/cmp173.component.ts",
        "cmp174/cmp174.component.ts",
        "cmp175/cmp175.component.ts",
        "cmp176/cmp176.component.ts",
        "cmp177/cmp177.component.ts",
        "cmp178/cmp178.component.ts",
        "cmp179/cmp179.component.ts",
        "module7.module.ts",
    ],
    assets = [
        ":module0_styles",
        ":module1_styles",
        ":module2_styles",
        ":module3_styles",
        ":module4_styles",
        ":module5_styles",
        ":module6_styles",
        ":module7_styles",
        ":module8_styles",
        ":module9_styles",
        "cmp170/cmp170.component.html",
        "cmp171/cmp171.component.html",
        "cmp172/cmp172.component.html",
        "cmp173/cmp173.component.html",
        "cmp174/cmp174.component.html",
        "cmp175/cmp175.component.html",
        "cmp176/cmp176.component.html",
        "cmp177/cmp177.component.html",
        "cmp178/cmp178.component.html",
        "cmp179/cmp179.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "//src/shared/material",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        ":module7",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ] + NG_FACTORY_ADDED_IMPORTS,
)

ts_web_test_suite(
    name = "test",
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        #"@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    runtime_deps = [
        "//src:initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "//src:rxjs_umd_modules",
    ],
)
        